--- a/ArifTanPortfolio/Pages/Portfolio.cshtml
+++ b/ArifTanPortfolio/Pages/Portfolio.cshtml
@@ -43,8 +43,8 @@
                     <button class="btn btn-outline-primary portfolio-filter" data-filter="Web Applications">
                         Web Applications
                     </button>
-                    <button class="btn btn-outline-primary portfolio-filter" data-filter="API Development">
-                        API Development
+                    <button class="btn btn-outline-primary portfolio-filter" data-filter="Integration Platform">
+                        Integration Platform
                     </button>
                 </div>
             </div>
