--- a/ArifTanPortfolio/Pages/Contact.cshtml
+++ b/ArifTanPortfolio/Pages/Contact.cshtml
@@ -39,6 +39,7 @@
                     </p>
                     
                     <form asp-page-handler="SendMessage" method="post" id="contactForm" novalidate>
+                        @Html.AntiForgeryToken()
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
                         
                         <div class="row g-3">
